# septacrypt-core

./: GAME_BUILDER.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
proofs/: monte_carlo_churn.py  prove_emoji_grammar.py  prove_entangled_repl.py  prove_knot_ledger.py  prove_pearl_edge_bijection.py  prove_retro_insertion.py  prove_scale_folding.py  prove_story_braid.py  prove_witnessed_knot.py  run_all.py
src/septacrypt_core/: __init__.py  cli.py
src/septacrypt_core/api/: campaign_ctrl.py  narrative.py  schema.py  session.py  surface.py
src/septacrypt_core/architect/: compiler.py  ir.py
src/septacrypt_core/dynamics/: fold.py  measurement.py  transition.py  version.py
src/septacrypt_core/geometry/: address.py  atlas.py  berry.py  counts.py  emoji.py  paths.py
src/septacrypt_core/ledger/: certificate.py  checkpoint.py  dag.py  events.py  replay.py  roots.py  stamp.py  substrate.py
src/septacrypt_core/narrative/: braid.py  dialogue.py  lexicon.py  patrol.py  weaver.py
src/septacrypt_core/observers/: __init__.py  beliefs.py
src/septacrypt_core/repl/: bot.py  terminal.py
src/septacrypt_core/scenario/: builtin.py  campaign.py  manifold_ship.py  params.py  reactor.py
src/septacrypt_core/spec/: __init__.py  load.py  types.py  validate.py
src/septacrypt_core/spirit/: vector.py
src/septacrypt_core/world/: __init__.py  snapshot.py  stepper.py  transaction.py
tests/: test_fast_path.py  test_game_session.py  test_hardening.py  test_name_hygiene.py  test_spec_init_bloch.py  test_worldspec.py
